video object fir

--- a/assets/sass/views/home.scss
+++ b/assets/sass/views/home.scss
@@ -173,6 +173,9 @@ body.no-scroll-home {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    >video{
+        object-fit: cover;
+    }
 }
 
 
