--- a/assets/sass/views/home.scss
+++ b/assets/sass/views/home.scss
@@ -3,6 +3,10 @@
 @import '~/assets/sass/typography.scss';
 @import '~/assets/sass/global.scss';
 
+body{
+    overflow: hidden;
+}
+
 .home-hero {
 	h1 {
         text-transform: uppercase;
