--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -683,3 +683,253 @@ figure {
         margin-bottom: 16px;
     }
 }
+
+// Pictures
+// Keeping type styles in here
+//  part of 'template-part-gallery.php'
+
+.project__gallery {
+    width: 100%;
+    position: relative;
+    align-items: flex-start;
+    flex-direction: column;
+    flex-wrap: wrap;
+    @media #{$bp-small}  {
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    @media #{$bp-med}  {
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    @media #{$bp-med}  {
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    @media #{$bp-large}  {
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 0 50px 20px;
+    }
+    // @include media($tablet-landscape) {
+    //     padding: 0 50px;
+    // }
+}
+
+.gallery__single {
+    display: flex;
+    margin: 0 0 30px;
+    position: relative;
+    flex: 0 0 100%;
+    align-items: flex-start;
+    flex-direction: column;
+    @media #{$bp-small}  {
+        flex: 1 0 auto;
+        flex-direction: column;
+    }
+    @media #{$bp-med}  {
+        flex: 1 0 auto;
+        flex-direction: column;
+    }
+    @media #{$bp-med}  {
+        flex: 1 0 auto;
+        flex-direction: column;
+    }
+    @media #{$bp-large}  {
+        flex-direction: row;
+    }
+}
+
+.gallery__single-half {
+    position: relative;
+    @media #{$bp-small}  {
+        flex: 1 0 auto;
+    }
+    @media #{$bp-med}  {
+        flex: 1 0 auto;
+    }
+    @media #{$bp-med}  {
+        flex: 1 0 auto;
+    }
+    @media #{$bp-large}  {
+        flex: 0  0 50%;
+    }
+}
+
+.gallery__single-half.gallery-image {
+    position: relative;
+    @media #{$bp-small}  {
+        display: flex;align-items:center;justify-content: center;
+    }
+    @media #{$bp-med}  {
+        display: flex;align-items:center;justify-content: center;
+    }
+    @media #{$bp-med}  {
+        display: flex;align-items:center;justify-content: center;
+    }
+    img {
+        position: relative;
+        width: 100%;
+        max-height: auto;        
+    }
+}
+
+.gallery__single-half.gallery-caption {
+    position: relative;
+    background-color: rgba(0,0,0,0.9);
+    padding: 40px;
+    color: $white;
+    @media #{$bp-small}  {
+        padding: 30px;
+    }
+    p {
+        margin: 0;
+        // font-size: modular-scale(0, 1rem);
+        // line-height: modular-scale(1, 1rem);
+        font-weight: 300;
+        font-family: $lite-headings;
+        font-size: 0.8rem;
+        font-style: italic;
+        @media #{$bp-small}  {
+            // font-size: modular-scale(0, 1rem);
+            // line-height: modular-scale(1, 1rem);
+        }
+    }
+}
+
+.gallery__single:nth-child(even) .gallery__single-half.gallery-image {
+    order: 2;
+    @media #{$bp-small}  {
+        order: -1;
+    }
+    @media #{$bp-med}  {
+        order: -1;
+    }
+    @media #{$bp-med}  {
+        order: -1;
+    }
+    img {
+        padding-right: 0;
+        padding-left: 0;
+    }
+}
+
+// in-content pictures
+#in-content.gallery__single {
+    margin: 0 -20%;
+    @media #{$bp-small}  {
+        margin: 20px 0;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    @media #{$bp-med}  {
+        margin: 50px -20% 10px;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    @media #{$bp-med}  {
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    @media #{$bp-large}  {
+        margin: 50px -20%;
+    }
+}
+
+// vidpic shortcode
+
+.vidpic-content.gallery__single {
+    margin: 0 -30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @media #{$bp-small}  {
+        margin: 0;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    @media #{$bp-med}  {
+        margin: 25px 0;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    @media #{$bp-med}  {
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    @media #{$bp-large}  {
+        margin: 40px -25%;
+    }
+}
+
+.vidpic-content.gallery__single {
+    .gallery__single-half.gallery-image.vidpic-vid {
+        position: relative;
+        width: 120%;
+        height: 450px;
+        -webkit-overflow-scrolling: touch;
+        flex: 0 0 500px;
+        @media #{$bp-small}  {
+            height: 300px;
+            width: 100%;
+            margin: 0 0 25px;
+            flex: 0 0 300px;
+        }
+        @media #{$bp-med}  {
+            height: 400px;
+            width: 100%;
+        }
+        @media #{$bp-large}  {
+            height: 290px;
+        }
+        @media #{$bp-xlarge}  {
+            height: 300px;
+        }
+        iframe {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            overflow-x:hidden;
+            overflow-y:hidden;
+        }
+    }
+}
+
+.vidpic-content.gallery__single {
+    .gallery__single-half.gallery-caption.vidpic-pic {
+        background-color: transparent;
+        padding: 0 0 0 20px;
+        flex: 0 1 auto;
+        @media #{$bp-small}  {
+            margin: 0 0 25px;
+            padding: 0;
+        }
+        img {
+            width: auto;
+            max-height: 280px;
+        }
+    }
+}
+
+.blog-entry {
+    .gallery__single:nth-child(even) .gallery__single-half.gallery-image {
+        order: 2;
+        @media #{$bp-small}  {
+            order: -1;
+        }
+        @media #{$bp-med}  {
+            order: -1;
+        }
+        @media #{$bp-med}  {
+            order: -1;
+        }
+        img {
+            padding-right: 0;
+            padding-left: 0;
+        }
+    }
+    .gallery__single:nth-child(even) .gallery__single-half.gallery-caption {
+        padding-left: 0;
+        padding-right: 20px;
+    }
+}
