--- a/src/sass/views/projects.scss
+++ b/src/sass/views/projects.scss
@@ -148,7 +148,7 @@ aside p {
 //  Arrow Buttons
 
 .project-nav {
-	margin-bottom: 50px;
+	padding-bottom: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
