--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -94,18 +94,18 @@ $main-accent: $yellow;
 // 	src: url('../webfonts/2F2E8B_2_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2F2E8B_2_0.woff2') format('woff2'),url('../webfonts/2F2E8B_2_0.woff') format('woff'),url('../webfonts/2F2E8B_2_0.ttf') format('truetype');
 // }
   
-@font-face {
-	font-family: 'Audimat3000-Leger';
-	src: url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
-	src: url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
-}
+// @font-face {
+// 	font-family: 'Audimat3000-Leger';
+// 	src: url('//localhost:8081/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
+// 	src: url('//localhost:8081/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('//localhost:8081/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('//localhost:8081/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('//localhost:8081/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
+// }
 
  
-@font-face {
-	font-family: 'Audimat3000-Regulier';
-	src: url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
-	src: url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
-}
+// @font-face {
+// 	font-family: 'Audimat3000-Regulier';
+// 	src: url('//localhost:8081/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
+// 	src: url('//localhost:8081/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('//localhost:8081/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('//localhost:8081/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('//localhost:8081/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
+// }
 
 // @font-face {
 // 	font-family: 'Audimat3000-Leger';
