Update single project - add gallery.

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -779,6 +779,9 @@ figure {
     background-color: rgba(0,0,0,0.9);
     padding: 40px;
     color: $white;
+    &.gallery-caption-clear {
+        background-color: transparent;
+    }
     @media #{$bp-small}  {
         padding: 30px;
     }
