--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -120,31 +120,31 @@ $main-accent: $yellow;
 // 	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
 // }
 
-@font-face {
-	font-family: 'Audimat3000-Leger';
-	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
-	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
-}
-
- 
-@font-face {
-	font-family: 'Audimat3000-Regulier';
-	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
-	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
-}
-
 // @font-face {
 // 	font-family: 'Audimat3000-Leger';
-// 	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
-// 	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
+// 	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
+// 	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
 // }
 
  
 // @font-face {
 // 	font-family: 'Audimat3000-Regulier';
-// 	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
-// 	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
+// 	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
+// 	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
 // }
+
+@font-face {
+	font-family: 'Audimat3000-Leger';
+	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
+	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
+}
+
+ 
+@font-face {
+	font-family: 'Audimat3000-Regulier';
+	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
+	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
+}
  
 // @font-face {
 // 	font-family: 'Archer-Light-Pro';
