--- a/assets/sass/views/about2.scss
+++ b/assets/sass/views/about2.scss
@@ -4,6 +4,9 @@
         margin: 0 auto;
         padding-top: 2rem;
         padding-bottom: 2rem;
+        @media #{$bp-small} {
+            padding: 1rem;
+        }
     }
     .tabs-wrapper {
         max-width: 1500px;
@@ -17,11 +20,17 @@
         list-style-type: none;
         margin: 0;
         padding: 0;
-        display: flex;
         background: #f8f8f8;
         background: $yellow;
+        position: sticky;
+        top: 57px;
+        @media #{$bp-large} {
+            display: flex;
+        }
         li {
-            width: calc(33.33%);
+            @media #{$bp-large} {
+				width: calc(33.33%);
+			}
             // flex: 1 0 auto;
             // border-top: 1px solid lightgrey;
             &.active:nth-child(1) {
@@ -34,7 +43,7 @@
             &:not(.active):first-child ~ *:not(.active):nth-child(2) {
                 border-left: 1px solid lighten(darkgrey,10);
             }
-            span {
+            span, a {
                 display: block;
                 width: 100%;
                 color: grey;
@@ -53,7 +62,8 @@
                     cursor: pointer;
                 }
             }
-            &.active span {
+            &.active span,
+            &.active a {
                 opacity: 1;
                 background: $yellow;
                 // background: #f8f8f8;
