working on map, got infoWindow working

--- a/app/assets/sass/views/contact.scss
+++ b/app/assets/sass/views/contact.scss
@@ -72,3 +72,11 @@
         border-bottom: 1px solid grey;
     }
 }
+
+.fuck {
+    color: red;
+    padding: 60px 0;
+}
+.gm-ui-hover-effect {
+    opacity: 0;
+}
