--- a/app/assets/sass/global.scss
+++ b/app/assets/sass/global.scss
@@ -10,7 +10,7 @@ html, body {
     font-size: 18px;
     line-height:1.5;
     font-weight: 300;
-    color: rgba(0,0,0,0.8);
+    color: $black;
     // line-height: 1.5rem;
     // overflow-x: hidden; //for the menu
     // overflow-y: auto; //for the menu
