--- a/app/assets/sass/variables.scss
+++ b/app/assets/sass/variables.scss
@@ -81,8 +81,8 @@ $bp-xsmall: $small-and-down;
 $bmobile-landscape: $small-and-down;
 
 // COLORS
-$white: 	rgba(255, 255, 255, 1);
-$black: 	rgba(0, 0, 0, 1);
+$white: 	rgba(255, 255, 255, .98);
+$black: 	rgba(0, 0, 0, 0.8);
 $grey: 		rgba(151, 151, 151, 1);
 $d-grey:	rgba(79, 79, 79, 1);
 $yellow:	rgba(252, 216, 56, 1);
