--- a/app/assets/sass/views/projects.scss
+++ b/app/assets/sass/views/projects.scss
@@ -126,7 +126,7 @@ aside p {
             margin-top: 0px;
         }
         a {
-            color: #444;
+            color: $black;
             text-decoration: none;
             position: relative;
             &:hover {
