some styling tweaks, also fixed footer apiBlogs

--- a/app/assets/sass/components/footer.scss
+++ b/app/assets/sass/components/footer.scss
@@ -1,6 +1,6 @@
 .main-footer {
 	width: 100%;
-	background: $black;
+	background: black;
 	padding: 25px;
     display: flex;
     align-items:flex-start;
@@ -96,9 +96,10 @@ form.footer-newsletter {
 	ul {
 		margin: 0;
 		padding: 0;
+		list-style: none;
 
 		li {
-			padding-bottom: 5px;
+			padding-bottom: 10px;
 			font-family: $lite-headings;
 		}
 		a{
@@ -122,6 +123,7 @@ form.footer-newsletter {
 	max-width: 350px;
 	width: calc(100% - 2em);
 	vertical-align: top;
+	font-size: 18px;
 }
 
 .input__field {
@@ -129,6 +131,7 @@ form.footer-newsletter {
 	display: block;
 	float: right;
 	padding: 0.8em;
+	font-size: 16px;
 	width: 100%;
 	border: none;
 	border-radius: 0;
@@ -182,7 +185,7 @@ form.footer-newsletter {
 	width: 100%;
 	background: transparent;
 	padding: 0.5em;
-	margin-bottom: 2em;
+	margin-bottom: 1em;
 	color: $black;
 	z-index: 100;
 	opacity: 0;
@@ -221,6 +224,10 @@ form.footer-newsletter {
 	top: 100%;
 	-webkit-transition: opacity 0.2s;
 	transition: opacity 0.2s;
+	@media #{$bp-med} {
+		top: 85%;
+	}
+
 }
 
 .input__label-content--ingenuity {
@@ -285,7 +292,10 @@ form.footer-newsletter {
 }
 
 .input__label-content.input__label-content--ingenuity {
-	color: rgba(255,255,255,0.2);
+	// color: rgba(255,255,255,0.2);
+	color: $yellow;
+	font-family: $lite-headings;
+	font-size: 22px;;
 }
 
 .footer__cta .button, form.footer-newsletter #mc-embedded-subscribe  {
@@ -303,7 +313,7 @@ form.footer-newsletter {
 	font-size: 16px;
 	display: flex;
 	justify-content: center;
-	align-content: center;
+	align-items: center;
 	&:hover, :active, :focus  {
 		border: 2px solid $yellow;
 		color: $black;
