--- a/app/assets/sass/views/contact.scss
+++ b/app/assets/sass/views/contact.scss
@@ -25,9 +25,16 @@
 	}
 }
 
+.contact__single {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .contact__single__copy {
     font-size: 21px;
     line-height: 1.3;
+    margin-top: 60px;
     h4 {
         font-size: 32px;
         margin: 0;
