Fix home dot grid overlay

--- a/app/assets/sass/views/home.scss
+++ b/app/assets/sass/views/home.scss
@@ -162,7 +162,7 @@ body.no-scroll-home {
 		top: 0;
 		left: 0;
 		width: 100%;
-		// background-image: url(~/assets/images/dotscreen.png);
+		background-image: url('~static/images/dotscreen.png');
             background-color: rgba(0,0,0,0.5);
 	}
 	
