--- a/app/assets/sass/global.scss
+++ b/app/assets/sass/global.scss
@@ -63,12 +63,12 @@ body.noscroll {
     overflow: none;
 }
 
-// blockquote {
-//     padding-left: 24px;
-//     margin-left: 24px;
-//     border-left: 1px solid #e3e3e3;
-//     color: #666;
-// }
+blockquote {
+    padding-left: 24px;
+    margin-left: 24px;
+    border-left: 1px solid #e3e3e3;
+    color: #666;
+}
 
 .main-wrapper {
 	// overflow-x: hidden;
