--- a/app/assets/sass/views/team.scss
+++ b/app/assets/sass/views/team.scss
@@ -130,6 +130,8 @@
 	.team__single {
         background-color: $yellow;
         background-color: #ffd200;
+        background-position: top right;
+        background-repeat:no-repeat;
 		position: relative;
 		min-height: 150px;
 		width: 100%;
