--- a/app/assets/sass/components/nav.scss
+++ b/app/assets/sass/components/nav.scss
@@ -20,7 +20,7 @@ nav{
         border: 0;
         margin: 0;
         padding: 0;
-        outline: 0;
+        // outline: 0;
         font-size: 20px;
         z-index: 900000;
         font-family: $main-headings;
