--- a/app/assets/sass/views/projects.scss
+++ b/app/assets/sass/views/projects.scss
@@ -13,14 +13,16 @@
 
 .projects__panel-link {
     width: 100%;
-    &:hover .projects__panel-wrap {
-        .color-overlay {
-            opacity: 0;		
-        }
-        .projects__panel-img { 
-            filter: grayscale(0.8);
-            background-blend-mode: normal;
-            filter: brightness(0.7);
+    &:hover, &:focus{
+        .projects__panel-wrap {
+            .color-overlay {
+                opacity: 0;		
+            }
+            .projects__panel-img { 
+                filter: grayscale(0.8);
+                background-blend-mode: normal;
+                filter: brightness(0.7);
+            }
         }
     }
 }
