--- a/app/assets/sass/typography.scss
+++ b/app/assets/sass/typography.scss
@@ -1,6 +1,6 @@
 div.bigcopy {
-	font-size: modular-scale(0, 2.2rem);
-	line-height: modular-scale(1, 2.2rem);
+
+
     // margin: 0 -5% 40px;
     font-size: 35px;
     line-height: 47px;
@@ -9,8 +9,6 @@ div.bigcopy {
 		line-height: 1.3;
 	}
 	p {
-		font-size: modular-scale(0, 2.2rem);
-        line-height: modular-scale(1, 2.2rem);
         font-size: 35px;
         line-height: 47px;
 		@media #{$small-and-down} {
@@ -21,13 +19,13 @@ div.bigcopy {
 	}
 	ol,
 	ul {
-		font-size: modular-scale(0, 2.2rem);
-        line-height: modular-scale(1, 2.2rem);
+
+
         font-size: 35px;
         line-height: 47px;
 		@media #{$bp-small} {
-			font-size: modular-scale(0);
-			line-height: modular-scale(0);
+
+
 		}
 	}
 }
@@ -42,15 +40,15 @@ div.bigcopy {
 	}
 	h1 {
 		font-family: $main-headings;
-		font-size: modular-scale(4, 1.4rem);	
-		line-height: modular-scale(4, 1.3rem);
+	
+
 		font-weight: 600;
 		color: #444;
 	}
 	h2 {
 		font-family: $main-headings;
-		font-size: modular-scale(3, 1.4rem);	
-		line-height: modular-scale(3, 1.3rem);
+	
+
 		font-weight: 600;
 		color: #444;
 	}
@@ -70,8 +68,8 @@ div.bigcopy {
 	}
 	h6 {
 		font-family: $lite-headings;
-		font-size: modular-scale(0, 0.9rem); 
-		line-height: modular-scale(0, 0.9rem); 
+ 
+ 
 		margin-top: 20px;
 	}
 	p {
@@ -81,14 +79,14 @@ div.bigcopy {
 			line-height: 1.3;
 		}
 		@media #{$medium-and-up} {
-		    font-size: modular-scale(0, 1.5rem);
-			line-height: modular-scale(1, 1.5rem);
-			font-size: 22px;
+			font-size: 23px;
+
+
 			line-height: 1.5;
 		}
 		@media #{$mobile-landscape} {
-			font-size: modular-scale(0, 1.3rem);
-			line-height:modular-scale(1, 1.3rem);
+
+
 		}
 	}
 }
@@ -114,8 +112,8 @@ span.bolded-text {
 		}
 		p {
 			font-style: italic;
-			font-size: modular-scale(1, 1.5rem);
-			line-height: modular-scale(1, 1.6rem);
+
+
 			font-weight: 400;
 			font-family: $p-font;
 			text-transform: none;
@@ -124,7 +122,7 @@ span.bolded-text {
 		    content: '“';
 		    position: absolute;
 		    margin-left: -.4em;
-		    font-size: modular-scale(4, 1.6rem);
+
 		    font-family: $main-headings;
 		    color: rgba(0,0,0,0.2);
 		}
@@ -151,8 +149,8 @@ span.bolded-text {
 		padding-left: 100px;
 		text-align: right;
 		text-transform: uppercase;
-		font-size: modular-scale(0, 0.9rem);
-		line-height: modular-scale(0, 1rem);
+
+
 	}
 }
 
@@ -164,18 +162,18 @@ span.bolded-text {
 .services-cta {
 	p {
 		font-family: $lite-headings;
-		font-size: modular-scale(2, 1.3rem);
-        line-height: modular-scale(2, 1.3rem);
+
+
         font-size: 37px;
         line-height: 37px;
         margin: 0;
 		@media #{$bp-small} {
-			font-size: modular-scale(1, 1.3rem);
-			line-height: modular-scale(1, 1.3rem);
+
+
 		}
 		@media #{$mobile-landscape} {
-			font-size: modular-scale(1, 1.3rem);
-			line-height: modular-scale(1, 1.3rem);
+
+
 		}
 	}
 }
@@ -189,8 +187,8 @@ span.bolded-text {
 	font-weight: bold;
 	// padding: 15px 30px;
 	// height: 60px;
-	font-size: modular-scale(0, 1.1rem);
-	line-height: modular-scale(0, 1.1rem);
+
+
 	font-size: 18px;
 	line-height: 18px;
 	// border: 1px solid $black;
@@ -210,21 +208,21 @@ span.bolded-text {
 .projects__panel {
 	h2 {
 		color: $white;
-		font-size: modular-scale(3, 1.3rem);
-		line-height:modular-scale(3);
+
+
 		position: relative;
 		transition: all 0.5s;
 		@media #{$bp-med} {
-			font-size: modular-scale(4, 1.3rem);
-			line-height: modular-scale(4);
+
+
 		}
 		@media #{$bp-large} {
-			font-size: modular-scale(5, 1.3rem);
-			line-height: modular-scale(5);
+
+
 		}
 		@media #{$bp-xlarge} {
-			font-size: modular-scale(6, 1.3rem);
-			line-height: modular-scale(6);
+
+
 		}
 	}
 }
@@ -244,13 +242,13 @@ span.bolded-text {
 		    top: 40%;
 		}
 		@media #{$bp-med} {
-		    font-size: modular-scale(3); 
-			line-height: modular-scale(3); 
+ 
+ 
 			top: 35%;
 		}
 		@media #{$bp-large} {
-		    font-size: modular-scale(5); 
-            line-height: modular-scale(5); 
+ 
+ 
             font-size: 101px;
             line-height: 101px;
 		}
@@ -264,7 +262,7 @@ span.bolded-text {
 }
 
 #left p {
-	line-height: modular-scale(0,1.2rem);
+
 	margin-bottom: 10px;
 	font-weight: 200;
 }
@@ -273,8 +271,8 @@ span.bolded-text {
 	.testimonial__quotation {
 		@media #{$bp-small} {
 			margin: 0 0 0 15px;
-		    font-size: modular-scale(1, 1.1rem); 
-		    line-height: modular-scale(1, 1.1rem); 
+ 
+ 
 		}
 	}
 	.testimonial__creds {
@@ -282,12 +280,12 @@ span.bolded-text {
 		@media #{$bp-small} {
 			h4 {
 				margin-top: 20px;
-				font-size: modular-scale(1, 1rem); 
-				line-height: modular-scale(1, 1rem); 
+ 
+ 
 			}
 			h5 {
-				font-size: modular-scale(0, 1rem); 
-				line-height: modular-scale(0, 1rem);
+ 
+
 			}
 		}
 	}
@@ -296,46 +294,43 @@ span.bolded-text {
 // BLOG
 
 .blog-entry > p:first-child,
-.blog-entry > blockquote:first-child {
+.blog-entry > blockquote:first-child,
+.blog-entry > blockquote:first-child > p:first-child {
 	&::first-letter {
 		float: left; 
-		font-size: 200px; 
-		line-height: 165px;
-		padding: 7px 25px 0px 0px;
+		font-size: 165px; 
+		line-height: 120px;
+		padding: 12px 10px 0px 0px;
 		// font-family: $main-headings;
 		@media #{$small-and-down} {
 			font-size: 80px; 
-			line-height: 80px;
-			padding: 0 10px 0 5px;
-			float: left;
+			line-height: 65px;
+			padding: 25px 10px 0 0;
 		}
 		@media #{$mobile-landscape} {
-			font-size: modular-scale(3, 1.6rem);
-			line-height: modular-scale(3, 1.6rem);
 			padding: 0 10px 0 5px;
-			float: left;
 		}
 	}
 }
 
-.blog-entry > blockquote:first-child,
-.blog-entry > blockquote:first-child > p:first-child {
-	&::first-letter {
-	    float: left;
-        font-size: 11.21766rem; 
-        line-height: 0.8;
-        padding: 22px 25px 0px 0px;
-        @media #{$bp-small} {
-            font-size: modular-scale(3);
-            line-height: modular-scale(3);
-            padding: 0 10px 0 5px;
-            float: left;
-        }
-        @media #{$mobile-landscape} {
-            font-size: 11.21766rem; 
-            line-height: modular-scale(3, 1.6rem);
-            padding: 0 10px 0 5px;
-            float: left;
-        }
-	}
-}
+// .blog-entry > blockquote:first-child,
+// .blog-entry > blockquote:first-child > p:first-child {
+// 	&::first-letter {
+// 	    float: left;
+//         font-size: 11.21766rem; 
+//         line-height: 0.8;
+//         padding: 22px 25px 0px 0px;
+//         @media #{$bp-small} {
+
+
+//             padding: 0 10px 0 5px;
+//             float: left;
+//         }
+//         @media #{$mobile-landscape} {
+//             font-size: 11.21766rem; 
+
+//             padding: 0 10px 0 5px;
+//             float: left;
+//         }
+// 	}
+// }
