small change, #10 attempt

--- a/app/assets/sass/views/projects.scss
+++ b/app/assets/sass/views/projects.scss
@@ -153,6 +153,32 @@ aside p {
     }
 }
 
+.main-wrapper .blog-entry >>> a {
+    color: $black;
+    text-decoration: none;
+    position: relative;
+    &:hover {
+
+        &::after {
+            height: 5px; 
+        }
+        // background: #444;
+        // color: $white;
+    }
+    &::after {
+        content: "";
+        transition: all .2s;
+        position: absolute;
+        height: 2px;
+        bottom: -1px;
+        left: 0;
+        right: 0;
+        background: $black;
+        width: 100%;
+    }
+}
+
+
 .project__testimonial {
     background-color: rgba(0,0,0,0.9);
     padding: 50px 10%;
