--- a/app/assets/sass/views/projects.scss
+++ b/app/assets/sass/views/projects.scss
@@ -132,13 +132,13 @@ aside p {
             position: relative;
             &:hover {
 
-                &::after {
+                &:after {
                    height: 5px; 
                 }
                 // background: #444;
                 // color: $white;
             }
-            &::after {
+            &:after {
                 content: "";
                 transition: all .2s;
                 position: absolute;
@@ -152,32 +152,6 @@ aside p {
         }
     }
 }
-
-.main-wrapper .blog-entry >>> a {
-    color: $black;
-    text-decoration: none;
-    position: relative;
-    &:hover {
-
-        &::after {
-            height: 5px; 
-        }
-        // background: #444;
-        // color: $white;
-    }
-    &::after {
-        content: "";
-        transition: all .2s;
-        position: absolute;
-        height: 2px;
-        bottom: -1px;
-        left: 0;
-        right: 0;
-        background: $black;
-        width: 100%;
-    }
-}
-
 
 .project__testimonial {
     background-color: rgba(0,0,0,0.9);
