--- a/app/assets/sass/views/home.scss
+++ b/app/assets/sass/views/home.scss
@@ -24,9 +24,9 @@
 		color: $white;
 		text-align: center;
 		margin: 20px 125px;
-		@media #{$bp-large} {
+		@media #{$bp-med} {
  
- 
+			margin: 20px 50px;
 		}
 	}
 }
