--- a/app/assets/sass/views/projects.scss
+++ b/app/assets/sass/views/projects.scss
@@ -113,14 +113,14 @@ aside p {
 
 .main-wrapper {
     aside { 
-        @media #{$medium-and-up} {
+        @media #{$large-and-up} {
             width: 15%;
             display: inline-block;
         }
     }
     .blog-entry {
         margin-top: 40px;
-        @media #{$medium-and-up} {
+        @media #{$large-and-up} {
             display: inline-block;
             width: 80%;
             vertical-align: top;
@@ -128,26 +128,26 @@ aside p {
         }
         a {
             color: $black;
-            text-decoration: none;
+            text-decoration: underline;
             position: relative;
             &:hover {
 
                 &:after {
-                   height: 5px; 
+                //    height: 5px; 
                 }
                 // background: #444;
                 // color: $white;
             }
             &:after {
-                content: "";
-                transition: all .2s;
-                position: absolute;
-                height: 2px;
-                bottom: -1px;
-                left: 0;
-                right: 0;
-                background: $black;
-                width: 100%;
+                // content: "";
+                // transition: all .2s;
+                // position: absolute;
+                // height: 2px;
+                // bottom: -1px;
+                // left: 0;
+                // right: 0;
+                // background: $black;
+                // width: 100%;
             }
         }
     }
