--- a/app/assets/sass/views/projects2.scss
+++ b/app/assets/sass/views/projects2.scss
@@ -49,7 +49,7 @@ aside p {
 			display: inline-block;
             width: 80%;
             vertical-align: top;
-            margin-top: 0px;
+            // margin-top: 0px;
 		}
     }
 }
