--- a/app/assets/sass/views/projects.scss
+++ b/app/assets/sass/views/projects.scss
@@ -132,6 +132,7 @@ aside p {
             position: relative;
             &:hover {
 
+                margin-bottom: 1px;
                 &:after {
                 //    height: 5px; 
                 }
