--- a/app/assets/sass/views/contact.scss
+++ b/app/assets/sass/views/contact.scss
@@ -89,7 +89,7 @@ a.info {
     transition: color .2s;
 }
 a.info:hover {
-    color: $black;
+    // color: $black;
 }
 p.info {
     color: $black;
