--- a/app/assets/sass/views/contact.scss
+++ b/app/assets/sass/views/contact.scss
@@ -27,7 +27,7 @@
 .contact__single {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
 }
 
 .contact__single__copy {
@@ -42,6 +42,15 @@
     img {
         display: block;
         margin: 0 auto;
+    }
+}
+
+.contact__single__image {
+    display: flex;
+    justify-content: center;
+    img {
+        width: 60%;
+        border-radius: 50%;
     }
 }
 
