--- a/app/assets/sass/components/menu.scss
+++ b/app/assets/sass/components/menu.scss
@@ -1,12 +1,19 @@
-.menu-overlay {	
-    display: flex;
-    align-items: center;
+#menu{
+    position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: 0;
     top: 0;
     right: 0;
+    z-index: 50;
+
+}
+
+.menu-overlay {	
+    height: 100vh;
+    display: flex;
+    align-items: center;
     transform-origin: top right;
-    position: absolute;
+    // z-index: 1000;
     transition: all 0.3s ease;
     background: $yellow;
 
