--- a/app/assets/sass/views/home.scss
+++ b/app/assets/sass/views/home.scss
@@ -91,66 +91,13 @@
 	}
 }
 
-.fullscreen-bg {
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	overflow: hidden;
-	z-index: -100;
-	filter: grayscale(80%) brightness(0.8) opacity(1);
-	@media #{$mobile-landscape} {
-		display: none;
-	}
-	@media #{$bp-small} {
-		display: none;
-	}
-}
-
-.fullscreen-bg.default-vidheader {
-	position: absolute;
-}
-
-.fullscreen-bg__video {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 115%;
-	height: 115%;
-	@media #{$bp-med} {
-		top: -300px;
-		left: -300px;
-		width: 200%;
-		height: 200%;
-	}
-	@media #{$bp-large} {
-		top: -160px;
-		left: -160px;
-		width: 150%;
-		height: 150%;
-	}
-	@media #{$bp-xlarge} {
-		top: -200px;
-		left: -200px;
-		width: 140%;
-		height: 140%;
-	}
-	@media #{$bp-xxlarge} {
-		top: -200px;
-		left: -200px;
-		width: 135%;
-		height: 135%;
-	}
-}
-
 body.no-scroll-home {
 	overflow: hidden !important;
 }
 
 .video-overlay {
 	&:before {
-                z-index: -1;
+		z-index: 1;
 		content:"";
 		display: block;
 		height: 100%;
@@ -176,37 +123,12 @@ body.no-scroll-home {
 
 
 video#bgvid { 
-    position: absolute;
-    top: -120%;
-    left: -50%;
-    width: 350%;
-    height: 350%;
-    z-index: -100;
-	background-size: cover; 
-	@media #{$medium-and-up} {
-		top: -300px;
-		left: -300px;
-		width: 200%;
-		height: 200%;
-	}
-	@media #{$large-and-up} {
-		top: -160px;
-		left: -160px;
-		width: 150%;
-		height: 150%;
-	}
-	@media #{$bp-xlarge} {
-		top: -200px;
-		left: -200px;
-		width: 140%;
-		height: 140%;
-	}
-	@media #{$bp-xxlarge} {
-		top: -200px;
-		left: -200px;
-		width: 135%;
-		height: 135%;
-	}
+	object-fit: cover;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: -100;
+
 }
 
 // @media (min-aspect-ratio: 16/9) {
@@ -297,10 +219,16 @@ h2.rw-sentence{
 	@media #{$large-and-up} {
 		margin: 0 8%;
 		text-align: left;
-	       font-size: 90px; //32px
+	       font-size: 70px; //32px
 		line-height: 1.25;
 	}	
 	@media #{$xlarge-and-up} {
+		margin: 0 8%;
+		text-align: left;
+		font-size: 75px; //32px
+		line-height: 1.25;
+	}
+	@media (min-width: 1601px) {
 		margin: 0 8%;
 		text-align: left;
 		font-size: 90px; //32px
@@ -309,7 +237,7 @@ h2.rw-sentence{
 	@media #{$bp-xxlarge} {
 		margin: 0 8%;
 		text-align: left;
-	    font-size: 101px; //32px
+	    font-size: 110px; //32px
 		line-height: 1.25;
 	}
 	@media #{$mobile-landscape} {
