different logic for real this time

--- a/app/assets/sass/components/menu.scss
+++ b/app/assets/sass/components/menu.scss
@@ -1,7 +1,17 @@
 #menu{
+    &.closed{
+        transform: scale(0);
+    }
+    &.open{
+        transform: scale(1);
+    }
+    transform-origin: top right;
+    height: 100vh;
+    width: 100%;
+    transition-property: transform;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
     position: absolute;
-    width: 100vw;
-    height: 0;
     top: 0;
     right: 0;
     z-index: 5000;
@@ -9,7 +19,7 @@
 }
 
 .menu-overlay {	
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     transform-origin: top right;
